[package]
name = "matrix_bot"
version = "0.1.0"
authors = ["David Teller <d.o.teller+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19", features = [ "lexer" ] }

[dependencies]
lalrpop-util = "0.19"
matrix_bot_api = "0.5"
rand = "0.7"
regex = "1"
log = "0.4"
env_logger = "0.7"
chrono = "0.4"
itertools = "0.9"
